syntax = "proto3";
package comdex.auctionsV2.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/auctionsV2/types";

message Auctions{
  uint64 auction_id = 1 [
    (gogoproto.moretags) = "yaml:\"auction_id\""
  ];
  cosmos.base.v1beta1.Coin collateral_token = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"collateral_token\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  // cosmos.base.v1beta1.Coin outflow_token_current_amount = 3 [
  //   (gogoproto.nullable) = false,
  //   (gogoproto.moretags) = "yaml:\"outflow_token_current_amount\"",
  //   (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  // ];
  cosmos.base.v1beta1.Coin debt_token = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"inflow_token_target_amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  // cosmos.base.v1beta1.Coin inflow_token_current_amount = 5 [
  //   (gogoproto.nullable) = false,
  //   (gogoproto.moretags) = "yaml:\"inflow_token_current_amount\"",
  //   (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  // ];
  uint64 active_bidding_id = 6 [
    (gogoproto.moretags) = "yaml:\"active_bidding_id\""
  ];
  repeated bidOwnerMapping bidding_ids = 7 [
    (gogoproto.moretags) = "yaml:\"bidding_ids\""
  ];
  string bid_factor = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"bid_factor\""
  ];
  // price indicator only for dutch auctions
  string collateral_token_initial_price = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outflow_token_initial_price\""
  ];
  string collateral_token_current_price = 10 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outflow_token_current_price\""
  ];
  string collateral_token_end_price = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"outflow_token_end_price\""
  ];
  string debt_token_current_price = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"inflow_token_current_price\""
  ];
  uint64 locked_vault_id = 13 [
    (gogoproto.moretags) = "yaml:\"locked_vault_id\""
  ];
  google.protobuf.Timestamp start_time = 15 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  google.protobuf.Timestamp end_time = 16 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"end_time\""
  ];

  uint64 app_id = 18 [
    (gogoproto.moretags) = "yaml:\"app_id\""
  ];
  bool auction_type = 19 [
    (gogoproto.customname) = "AuctionType",
    (gogoproto.moretags) = "yaml:\"auction_type\""];
  // uint64 auction_status = 20 [
  //   (gogoproto.moretags) = "yaml:\"auction_status\""
  // ];

}

 message bidOwnerMapping{
   uint64 bid_id = 1;
   string bid_owner = 2;
 }
