syntax = "proto3";
package comdex.auctionsV2.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "comdex/auctionsV2/v1beta1/params.proto";
import "comdex/auctionsV2/v1beta1/auction.proto";
import "comdex/auctionsV2/v1beta1/bid.proto";

option go_package = "github.com/comdex-official/comdex/x/auctionsV2/types";

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAuctionRequest {
  uint64 auction_id = 1;
  bool history = 2;
}

message QueryAuctionResponse {
  Auction auction = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\""];
}

message QueryAuctionsRequest {
  bool history = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAuctionsResponse {
  repeated Auction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBidsRequest {
  string bidder = 1;
  bool history = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBidsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated Bid bids = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"bids\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryAuctionParamsRequest {}

message QueryAuctionParamsResponse {
  AuctionParams auction_params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auction_params\""
  ];
}

message QueryUserLimitBidsRequest {
  string bidder = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryUserLimitBidsResponse {
  LimitOrderBidsForUser limitOrderBids = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"limit_order_bids\""
  ];
}

message QueryUserLimitBidsByAssetIDRequest {
  string bidder = 1;
  uint64 collateral_token_id = 2;
  uint64 debt_token_id = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryUserLimitBidsByAssetIDResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated LimitOrderBid limitOrderBids = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"limit_order_bids\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryLimitBidsRequest {
  uint64 collateral_token_id = 1;
  uint64 debt_token_id = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryLimitBidsResponse {
  repeated LimitOrderBid limitOrderBids = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"limit_order_bids\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/params";
  }
  rpc Auction(QueryAuctionRequest) returns (QueryAuctionResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/auction/{auction_id}/{history}";
  }
  rpc Auctions(QueryAuctionsRequest) returns (QueryAuctionsResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/auctions/{history}";
  }
  rpc Bids(QueryBidsRequest) returns (QueryBidsResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/bids/{bidder}/{history}";
  }
  rpc AuctionParams(QueryAuctionParamsRequest) returns (QueryAuctionParamsResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/auction_params";
  }
  rpc UserLimitBids(QueryUserLimitBidsRequest) returns (QueryUserLimitBidsResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/userlimitorderbids/{bidder}";
  }
  rpc UserLimitBidsByAssetID(QueryUserLimitBidsByAssetIDRequest) returns (QueryUserLimitBidsByAssetIDResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/userlimitorderbids/{bidder}/{collateral_token_id}/{debt_token_id}";
  }
  rpc LimitBids(QueryLimitBidsRequest) returns (QueryLimitBidsResponse) {
    option (google.api.http).get = "/comdex/auctions/v2/limitorderbids/{collateral_token_id}/{debt_token_id}";
  }
}